--- a/essenceoflivecoding.cabal
+++ b/essenceoflivecoding.cabal
@@ -71,3 +71,11 @@ executable DemoWai
     , warp == 3.2.*
     , http-types == 0.12.*
     , bytestring == 0.10.*
+
+executable SpeedTest
+  main-is: SpeedTest.hs
+  hs-source-dirs: app
+  build-depends:
+      base >=4.11 && <4.13
+    , essenceoflivecoding
+    , transformers == 0.5.*
