Speedtests and proper demos

--- a/essenceoflivecoding.cabal
+++ b/essenceoflivecoding.cabal
@@ -47,8 +47,26 @@ test-suite essenceoflivecoding
     , syb == 0.7.*
     , essenceoflivecoding
 
-executable Demo
-  main-is: Demo.hs
+executable DemoSine
+  main-is: DemoSine.hs
+  other-modules:
+      Examples
+  hs-source-dirs: app
+  build-depends:
+      base >=4.11 && <4.13
+    , essenceoflivecoding
+
+executable DemoSineChange
+  main-is: DemoSineChange.hs
+  other-modules:
+      Examples
+  hs-source-dirs: app
+  build-depends:
+      base >=4.11 && <4.13
+    , essenceoflivecoding
+
+executable DemoSinesForever
+  main-is: DemoSinesForever.hs
   other-modules:
       Examples
   hs-source-dirs: app
@@ -79,3 +97,10 @@ executable SpeedTest
       base >=4.11 && <4.13
     , essenceoflivecoding
     , transformers == 0.5.*
+
+executable SpeedTestYampa
+  main-is: SpeedTestYampa.hs
+  hs-source-dirs: app
+  build-depends:
+      base >=4.11 && <4.13
+    , Yampa
