--- a/essenceoflivecoding-gloss-example/essenceoflivecoding-gloss-example.cabal
+++ b/essenceoflivecoding-gloss-example/essenceoflivecoding-gloss-example.cabal
@@ -29,3 +29,15 @@ executable essenceoflivecoding-gloss-example
     , syb
   hs-source-dirs:      app
   default-language:    Haskell2010
+
+executable gears
+  main-is:             Gears.hs
+  -- other-modules:
+  -- other-extensions:
+  build-depends:
+      base ^>=4.12.0.0
+    , gloss
+    , essenceoflivecoding
+    , essenceoflivecoding-gloss
+  hs-source-dirs:      app
+  default-language:    Haskell2010
