--- a/essenceoflivecoding-gloss-example/stack.yaml
+++ b/essenceoflivecoding-gloss-example/stack.yaml
@@ -6,4 +6,4 @@ extra-deps:
   - simple-affine-space-0.1@sha256:09e582f2e12ce9feb251cbdacec57fa1f4a838ec63928026d98b758e89f9abd7
 nix:
   enable: true
-  packages: [libGL libGLU freeglut]
+  packages: [libGL libGLU freeglut zlib]
