--- a/essenceoflivecoding.cabal
+++ b/essenceoflivecoding.cabal
@@ -19,11 +19,12 @@ library
     , LiveCoding.Cell
     , LiveCoding.Cell.Feedback
     , LiveCoding.Cell.HotCodeSwap
+    , LiveCoding.CellExcept
     , LiveCoding.Coalgebra
-    , LiveCoding.Commutable
     , LiveCoding.Debugger
     , LiveCoding.Debugger.StatePrint
     , LiveCoding.Exceptions
+    , LiveCoding.Exceptions.Finite
     , LiveCoding.External
     , LiveCoding.Forever
     , LiveCoding.LiveProgram
