--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -31,7 +31,7 @@ library
     , LiveCoding.LiveProgram.HotCodeSwap
     , LiveCoding.Migrate
     , LiveCoding.Migrate.Migration
-    -- , LiveCoding.Migrate.Debugger
+    , LiveCoding.Migrate.Debugger
     , LiveCoding.RuntimeIO
 
   other-modules:
