--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -19,6 +19,7 @@ library
     , LiveCoding.Cell
     , LiveCoding.Cell.Feedback
     , LiveCoding.Cell.HotCodeSwap
+    , LiveCoding.Cell.Resample
     , LiveCoding.CellExcept
     , LiveCoding.Coalgebra
     , LiveCoding.Debugger
@@ -48,6 +49,7 @@ library
       base >=4.11 && <4.13
     , transformers == 0.5.*
     , syb == 0.7.*
+    , vector-sized == 1.2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
 
