--- a/essenceoflivecoding-gloss-example/essenceoflivecoding-gloss-example.cabal
+++ b/essenceoflivecoding-gloss-example/essenceoflivecoding-gloss-example.cabal
@@ -16,19 +16,20 @@ maintainer:          programming@manuelbaerenz.de
 category:            Graphics
 extra-source-files:  CHANGELOG.md
 
-executable essenceoflivecoding-gloss-example
-  main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:
-      base ^>=4.12.0.0
-    , transformers
-    , gloss
-    , essenceoflivecoding
-    , essenceoflivecoding-gloss
-    , syb
-  hs-source-dirs:      app
-  default-language:    Haskell2010
+
+-- executable essenceoflivecoding-gloss-example
+--   main-is:             Main.hs
+--   -- other-modules:
+--   -- other-extensions:
+--   build-depends:
+--       base ^>=4.12.0.0
+--     , transformers
+--     , gloss
+--     , essenceoflivecoding
+--     , essenceoflivecoding-gloss
+--     , syb
+--   hs-source-dirs:      app
+--   default-language:    Haskell2010
 
 executable gears
   main-is:             Gears.hs
@@ -37,7 +38,9 @@ executable gears
   build-depends:
       base ^>=4.12.0.0
     , gloss
+    , transformers
     , essenceoflivecoding
     , essenceoflivecoding-gloss
+    , essenceoflivecoding-pulse
   hs-source-dirs:      app
   default-language:    Haskell2010
