Cleaned up *.cabal files, merged GHCi package and bumped version

--- a/demos/demos.cabal
+++ b/demos/demos.cabal
@@ -1,16 +1,40 @@
 name:                demos
-version:             0.1.0.0
--- synopsis:
--- description:
+version:             0.1.0.1
+synopsis: General purpose live coding framework - Demo applications
+description:
+  essence-of-live-coding is a general purpose and type safe live coding framework.
+  .
+  You can run programs in it, and edit, recompile and reload them while they're running.
+  Internally, the state of the live program is automatically migrated when performing hot code swap.
+  .
+  The library also offers an easy to use FRP interface.
+  It is parametrized by its side effects,
+  separates data flow cleanly from control flow,
+  and allows to develop live programs from reusable, modular components.
+  There are also useful utilities for debugging and quickchecking.
+  .
+  This package contains simple demos that are used in the article
+  (https://www.manuelbaerenz.de/essence-of-live-coding/EssenceOfLiveCoding.pdf),
+  such as sine generators, control flow and a WAI webserver example.
+
 license:             BSD3
 license-file:        LICENSE
 author:              Manuel Bärenz
 maintainer:          programming@manuelbaerenz.de
--- copyright:
--- category:
+homepage:            https://www.manuelbaerenz.de/#computerscience
+category:            FRP, Live coding
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 cabal-version:       >=1.10
+
+source-repository head
+  type:     git
+  location: git@github.com:turion/essence-of-live-coding.git
+
+source-repository this
+  type:     git
+  location: git@github.com:turion/essence-of-live-coding.git
+  tag:      v0.1.0.1
 
 executable DemoSine
   main-is: DemoSine.hs
@@ -18,7 +42,7 @@ executable DemoSine
       Examples
   hs-source-dirs: app
   build-depends:
-      base >=4.11 && <4.13
+      base >= 4.11 && <4.13
     , essence-of-live-coding
 
 executable DemoSineWait
@@ -27,7 +51,7 @@ executable DemoSineWait
       Examples
   hs-source-dirs: app
   build-depends:
-      base >=4.11 && <4.13
+      base >= 4.11 && <4.13
     , essence-of-live-coding
 
 executable DemoSineWaitChange
@@ -36,7 +60,7 @@ executable DemoSineWaitChange
       Examples
   hs-source-dirs: app
   build-depends:
-      base >=4.11 && <4.13
+      base >= 4.11 && <4.13
     , essence-of-live-coding
 
 executable DemoSinesForever
@@ -45,7 +69,7 @@ executable DemoSinesForever
       Examples
   hs-source-dirs: app
   build-depends:
-      base >=4.11 && <4.13
+      base >= 4.11 && <4.13
     , essence-of-live-coding
 
 executable DemoWai
@@ -56,7 +80,7 @@ executable DemoWai
       DemoWai.DemoWai2
   hs-source-dirs: app
   build-depends:
-      base >=4.11 && <4.13
+      base >= 4.11 && <4.13
     , essence-of-live-coding
     , transformers == 0.5.*
     , wai  == 3.2.*
