--- a/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
+++ b/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
@@ -1,20 +1,38 @@
-cabal-version:       2.4
--- Initial package description 'essence-of-live-coding-gloss.cabal' generated
--- by 'cabal init'.  For further documentation, see
--- http://haskell.org/cabal/users-guide/
-
 name:                essence-of-live-coding-gloss
-version:             0.1.0.0
--- synopsis:
--- description:
--- bug-reports:
-license:             BSD-3-Clause
+version:             0.1.0.1
+synopsis: General purpose live coding framework - Gloss backend
+description:
+  essence-of-live-coding is a general purpose and type safe live coding framework.
+  .
+  You can run programs in it, and edit, recompile and reload them while they're running.
+  Internally, the state of the live program is automatically migrated when performing hot code swap.
+  .
+  The library also offers an easy to use FRP interface.
+  It is parametrized by its side effects,
+  separates data flow cleanly from control flow,
+  and allows to develop live programs from reusable, modular components.
+  There are also useful utilities for debugging and quickchecking.
+  .
+  This package contains a backend for Gloss (http://gloss.ouroborus.net/).
+
+license:             BSD3
 license-file:        LICENSE
 author:              Manuel Bärenz
 maintainer:          programming@manuelbaerenz.de
--- copyright:
-category:            Graphics
+homepage:            https://www.manuelbaerenz.de/#computerscience
+category:            FRP, Live coding
+build-type:          Simple
 extra-source-files:  CHANGELOG.md
+cabal-version:       >=1.10
+
+source-repository head
+  type:     git
+  location: git@github.com:turion/essence-of-live-coding.git
+
+source-repository this
+  type:     git
+  location: git@github.com:turion/essence-of-live-coding.git
+  tag:      v0.1.0.1
 
 library
   exposed-modules:
@@ -22,10 +40,8 @@ library
     LiveCoding.Gloss.Debugger
     LiveCoding.Gloss.GHCi
     LiveCoding.Gloss.PictureM
-  -- other-modules:
-  -- other-extensions:
   build-depends:
-      base ^>=4.12.0.0
+      base >= 4.11 && <4.13
     , syb
     , transformers
     , essence-of-live-coding
