Add cell migrations

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -52,6 +52,7 @@ library
     , LiveCoding.LiveProgram
     , LiveCoding.LiveProgram.HotCodeSwap
     , LiveCoding.Migrate
+    , LiveCoding.Migrate.Cell
     , LiveCoding.Migrate.Migration
     , LiveCoding.Migrate.Debugger
     , LiveCoding.RuntimeIO
