--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -71,7 +71,7 @@ library
       base >= 4.11 && < 5
     , transformers == 0.5.*
     , syb == 0.7.*
-    , vector-sized == 1.4.*
+    , vector-sized >= 1.2
     , foreign-store
   hs-source-dirs:      src
   default-language:    Haskell2010
