--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -76,7 +76,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-test-suite essence-of-live-coding
+test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
