--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ ghc:
   - '8.4.3'
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev pulseaudio
-script: cabal build all && cabal test all
+  - sudo apt-get install -qq libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libpulse-dev libblas-dev liblapack-dev
+script: cabal new-build all && cabal new-test all
 install: skip
