--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -42,6 +42,7 @@ library
     , LiveCoding.Cell.HotCodeSwap
     , LiveCoding.Cell.Monad
     , LiveCoding.Cell.Monad.Trans
+    , LiveCoding.Cell.NonBlocking
     , LiveCoding.Cell.Resample
     , LiveCoding.Cell.Util
     , LiveCoding.CellExcept
@@ -118,4 +119,12 @@ executable TestExceptions
       base >= 4.11 && < 5
     , essence-of-live-coding
     , transformers == 0.5.*
+  default-language:    Haskell2010
+
+executable TestNonBlocking
+  main-is: TestNonBlocking.hs
+  hs-source-dirs: app
+  build-depends:
+      base >= 4.11 && < 5
+    , essence-of-live-coding
   default-language:    Haskell2010
