--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -51,6 +51,8 @@ library
     , LiveCoding.Exceptions.Finite
     , LiveCoding.External
     , LiveCoding.Forever
+    , LiveCoding.Handle
+    , LiveCoding.Handle.Examples
     , LiveCoding.LiveProgram
     , LiveCoding.LiveProgram.HotCodeSwap
     , LiveCoding.LiveProgram.Monad.Trans
@@ -74,6 +76,7 @@ library
   build-depends:
       base >= 4.11 && < 5
     , transformers == 0.5.*
+    , containers >= 0.6
     , syb == 0.7.*
     , vector-sized >= 1.2
     , foreign-store
@@ -84,7 +87,8 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
-      Monad.Trans
+      Handle
+    , Monad.Trans
     , TestData.Foo1
     , TestData.Foo2
     , Util
