--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ ghc:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libpulse-dev libblas-dev liblapack-dev
-script: cabal new-build all && cabal new-test all
+script:
+  - cabal new-build all
+  - cabal new-test all --enable-tests
 install: skip
