Refactor launching threads into separate file and generalise

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -62,6 +62,7 @@ library
     , LiveCoding.Migrate.Monad.Trans
     , LiveCoding.Migrate.Debugger
     , LiveCoding.RuntimeIO
+    , LiveCoding.RuntimeIO.Launch
 
   other-modules:
       LiveCoding.Preliminary.CellExcept
