Add GHCi support module

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -51,6 +51,7 @@ library
     , LiveCoding.Exceptions.Finite
     , LiveCoding.External
     , LiveCoding.Forever
+    , LiveCoding.GHCi
     , LiveCoding.Handle
     , LiveCoding.Handle.Examples
     , LiveCoding.LiveProgram
