Add LiveProgram tests

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -90,16 +90,20 @@ test-suite test
   main-is: Main.hs
   other-modules:
       Handle
+    , Handle.LiveProgram
     , Monad
     , Monad.Trans
     , TestData.Foo1
     , TestData.Foo2
     , Util
+    , Util.LiveProgramMigration
   hs-source-dirs: test
   build-depends:
       base >= 4.11 && < 5
     , syb == 0.7.*
     , transformers >= 0.5
+    , containers >= 0.6
+    , mtl >= 2.2
     , essence-of-live-coding
     , test-framework == 0.8.*
     , test-framework-quickcheck2 == 0.3.*
