--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ before_install:
 script:
   - cabal new-build all --enable-tests
   - cabal new-test all --enable-tests
+  - git fetch origin master:origin/master && git rebase origin/master --exec "cabal new-build all --enable-tests"
 install: skip
