--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -126,5 +126,6 @@ executable TestNonBlocking
   hs-source-dirs: app
   build-depends:
       base >= 4.11 && < 5
+    , transformers >= 0.5
     , essence-of-live-coding
   default-language:    Haskell2010
