--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -84,6 +84,7 @@ library
     , foreign-store
   hs-source-dirs:      src
   default-language:    Haskell2010
+  default-extensions: StrictData
 
 test-suite test
   type: exitcode-stdio-1.0
