--- a/gears/gears.cabal
+++ b/gears/gears.cabal
@@ -45,3 +45,4 @@ executable gears
     , essence-of-live-coding-pulse
   hs-source-dirs:      app
   default-language:    Haskell2010
+  default-extensions: StrictData
