--- a/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
+++ b/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
@@ -48,4 +48,4 @@ library
     , gloss
   hs-source-dirs:      src
   default-language:    Haskell2010
-  default-extensions: StrictData
+  default-extensions: Strict
