--- a/essence-of-live-coding-quickcheck/essence-of-live-coding-quickcheck.cabal
+++ b/essence-of-live-coding-quickcheck/essence-of-live-coding-quickcheck.cabal
@@ -45,4 +45,4 @@ library
     , boltzmann-samplers == 0.1.*
   hs-source-dirs:      src
   default-language:    Haskell2010
-  default-extensions:  StrictData
+  default-extensions:  Strict
