--- a/essence-of-live-coding-gloss-example/essence-of-live-coding-gloss-example.cabal
+++ b/essence-of-live-coding-gloss-example/essence-of-live-coding-gloss-example.cabal
@@ -46,3 +46,4 @@ executable essence-of-live-coding-gloss-example
     , syb
   hs-source-dirs:      app
   default-language:    Haskell2010
+  default-extensions: StrictData
