--- a/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
+++ b/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
@@ -47,3 +47,4 @@ executable essence-of-live-coding-pulse-example
   hs-source-dirs:      app
   default-language:    Haskell2010
   default-extensions: Strict
+  ghc-options: -O2 -threaded -rtsopts
