--- a/gears/gears.cabal
+++ b/gears/gears.cabal
@@ -45,4 +45,7 @@ executable gears
     , essence-of-live-coding-pulse
   hs-source-dirs:      app
   default-language:    Haskell2010
+  ghc-options: -O2 -threaded -rtsopts -dynamic
   default-extensions: Strict
+  -- executable-profiling: true
+  -- ghc-options: -O3 +RTS --RTS -N3
