Refactor .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 language: haskell
+addons:
+  apt:
+    packages:
+      - libgl1-mesa-dev
+      - libglu1-mesa-dev
+      - freeglut3-dev
+      - libpulse-dev
+      - libblas-dev
+      - liblapack-dev
 cache:
   directories:
     - $HOME/.cabal
 ghc:
   - '8.8'
   - '8.6'
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libpulse-dev libblas-dev liblapack-dev
 script:
   - cabal new-build all --enable-tests
   - cabal new-test all --enable-tests
