Enable StrictData in main package & speedtest

--- a/essence-of-live-coding-speedtest-yampa/essence-of-live-coding-speedtest-yampa.cabal
+++ b/essence-of-live-coding-speedtest-yampa/essence-of-live-coding-speedtest-yampa.cabal
@@ -42,6 +42,7 @@ executable SpeedTest
       base >= 4.11 && < 5
     , essence-of-live-coding
     , transformers == 0.5.*
+  default-extensions: StrictData
 
 executable SpeedTestYampa
   main-is: SpeedTestYampa.hs
