--- a/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
+++ b/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
@@ -42,8 +42,8 @@ executable essence-of-live-coding-pulse-example
     , transformers
     , pulse-simple == 0.1.*
     , vector
-    , essence-of-live-coding
-    , essence-of-live-coding-pulse
+    , essence-of-live-coding >= 0.2.0.0
+    , essence-of-live-coding-pulse >= 0.2.0.0
   hs-source-dirs:      app
   default-language:    Haskell2010
   default-extensions: StrictData
