--- a/essence-of-live-coding-gloss-example/essence-of-live-coding-gloss-example.cabal
+++ b/essence-of-live-coding-gloss-example/essence-of-live-coding-gloss-example.cabal
@@ -39,11 +39,11 @@ executable essence-of-live-coding-gloss-example
   main-is:             Main.hs
   build-depends:
       base >= 4.11 && < 5
-    , transformers
-    , gloss
+    , transformers >= 0.5
+    , gloss >= 1.13
     , essence-of-live-coding >= 0.2.0.0
     , essence-of-live-coding-gloss >= 0.2.0.0
-    , syb
+    , syb >= 0.7
   hs-source-dirs:      app
   default-language:    Haskell2010
   default-extensions: StrictData
