--- a/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
+++ b/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
@@ -41,11 +41,11 @@ library
     LiveCoding.Gloss.PictureM
   build-depends:
       base >= 4.11 && < 5
-    , syb
-    , transformers
+    , syb >= 0.7
+    , transformers >= 0.5
     , essence-of-live-coding >= 0.2.0.0
-    , foreign-store
-    , gloss
+    , foreign-store >= 0.2
+    , gloss >= 1.13
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
