--- a/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
+++ b/essence-of-live-coding-pulse-example/essence-of-live-coding-pulse-example.cabal
@@ -39,9 +39,9 @@ executable essence-of-live-coding-pulse-example
   main-is:             Main.hs
   build-depends:
       base >= 4.11 && < 5
-    , transformers
-    , pulse-simple == 0.1.*
-    , vector
+    , transformers >= 0.5
+    , pulse-simple >= 0.1
+    , vector >= 0.12
     , essence-of-live-coding >= 0.2.0.0
     , essence-of-live-coding-pulse >= 0.2.0.0
   hs-source-dirs:      app
