--- a/essence-of-live-coding-pulse/essence-of-live-coding-pulse.cabal
+++ b/essence-of-live-coding-pulse/essence-of-live-coding-pulse.cabal
@@ -32,9 +32,9 @@ library
   build-depends:
       base >= 4.11 && < 5
     , essence-of-live-coding >= 0.2.0.0
-    , transformers
-    , pulse-simple == 0.1.*
-    , foreign-store
+    , transformers >= 0.5
+    , pulse-simple >= 0.1
+    , foreign-store >= 0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
