--- a/essence-of-live-coding-speedtest-yampa/essence-of-live-coding-speedtest-yampa.cabal
+++ b/essence-of-live-coding-speedtest-yampa/essence-of-live-coding-speedtest-yampa.cabal
@@ -41,7 +41,7 @@ executable SpeedTest
   build-depends:
       base >= 4.11 && < 5
     , essence-of-live-coding
-    , transformers == 0.5.*
+    , transformers >= 0.5
   default-extensions: StrictData
 
 executable SpeedTestYampa
