Added feedback test

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -92,7 +92,8 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
-      Handle
+      Feedback
+    , Handle
     , Handle.LiveProgram
     , Monad
     , Monad.Trans
