--- a/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
+++ b/essence-of-live-coding-gloss/essence-of-live-coding-gloss.cabal
@@ -46,6 +46,7 @@ library
     , essence-of-live-coding >= 0.2.1
     , foreign-store >= 0.2
     , gloss >= 1.13
+    , GLUT >= 2.7
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
