Extend LiveCoding.Cell.Util

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -93,7 +93,10 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
-      Feedback
+      Cell
+    , Cell.Monad.Trans
+    , Cell.Util
+    , Feedback
     , Handle
     , Handle.LiveProgram
     , Monad
