--- a/essence-of-live-coding-warp/essence-of-live-coding-warp.cabal
+++ b/essence-of-live-coding-warp/essence-of-live-coding-warp.cabal
@@ -56,6 +56,7 @@ test-suite test
   build-depends:
       base >= 4.11 && < 5
     , http-client >= 0.7.1
+    , bytestring >= 0.10
     , essence-of-live-coding >= 0.2.5
     , essence-of-live-coding-warp
   default-language:    Haskell2010
