Add libasound to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
       - libpulse-dev
       - libblas-dev
       - liblapack-dev
+      - libasound2-dev
     sources:
       - sourceline: 'ppa:hvr/ghc'
 cache:
