--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -103,6 +103,7 @@ test-suite test
     , Handle.LiveProgram
     , Monad
     , Monad.Trans
+    , RuntimeIO.Launch
     , TestData.Foo1
     , TestData.Foo2
     , Util
@@ -118,6 +119,8 @@ test-suite test
     , test-framework >= 0.8
     , test-framework-quickcheck2 >= 0.3
     , QuickCheck >= 2.12
+    , test-framework-hunit >= 0.3
+    , HUnit >= 1.3
   default-language:    Haskell2010
 
 executable TestExceptions
