--- a/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
+++ b/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
@@ -26,6 +26,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:
       LiveCoding.PortMidi
+  other-modules:
+      LiveCoding.PortMidi.Internal
   build-depends:
       base >= 4.7
     , transformers >= 0.5
