--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -88,6 +88,7 @@ library
     , vector-sized >= 1.2
     , foreign-store >= 0.2
     , time >= 1.9
+    , mmorph >= 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
