--- a/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
+++ b/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
@@ -32,6 +32,7 @@ library
       base >= 4.7
     , transformers >= 0.5
     , PortMidi >= 0.2
+    , mmorph >= 1.1
     , essence-of-live-coding >= 0.2.5
   hs-source-dirs:   src
   default-language: Haskell2010
