--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -105,6 +105,7 @@ test-suite test
     , Feedback
     , Handle
     , Handle.LiveProgram
+    , HandlingState
     , Monad
     , Monad.Trans
     , RuntimeIO.Launch
