--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -89,6 +89,7 @@ library
     , foreign-store >= 0.2
     , time >= 1.9
     , mmorph >= 1.1
+    , profunctors >= 5.2
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
