--- a/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
+++ b/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
@@ -22,6 +22,7 @@ copyright:           2021 Manuel Bärenz
 category:            Sound
 build-type:          Simple
 cabal-version:       >=1.10
+extra-source-files: CHANGELOG.md
 
 library
   exposed-modules:
