--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -123,6 +123,7 @@ test-suite test
     , transformers >= 0.5
     , containers >= 0.6
     , mtl >= 2.2
+    , mmorph >= 1.1
     , essence-of-live-coding
     , test-framework >= 0.8
     , test-framework-quickcheck2 >= 0.3
