--- a/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
+++ b/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
@@ -1,5 +1,5 @@
 name:                essence-of-live-coding-PortMidi
-version:             0.2.5
+version:             0.2.6
 synopsis: General purpose live coding framework - PortMidi backend
 description:
   essence-of-live-coding is a general purpose and type safe live coding framework.
@@ -30,9 +30,9 @@ library
   other-modules:
       LiveCoding.PortMidi.Internal
   build-depends:
-      base >= 4.7
+      base >= 4.7 && < 5
     , transformers >= 0.5
     , PortMidi >= 0.2
-    , essence-of-live-coding >= 0.2.5
+    , essence-of-live-coding >= 0.2.6
   hs-source-dirs:   src
   default-language: Haskell2010
