essence-of-live-coding: add NoMigration
add NoMigration
refactor HandlingState.hs using NoMigration
add NoMigration related tests

Co-authored-by: Manuel Bärenz <programming@manuelbaerenz.de>

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -64,6 +64,7 @@ library
     , LiveCoding.Migrate
     , LiveCoding.Migrate.Cell
     , LiveCoding.Migrate.Migration
+    , LiveCoding.Migrate.NoMigration
     , LiveCoding.Migrate.Monad.Trans
     , LiveCoding.Migrate.Debugger
     , LiveCoding.RuntimeIO
@@ -98,6 +99,7 @@ test-suite test
   main-is: Main.hs
   other-modules:
       Cell
+    , Migrate.NoMigration
     , Cell.Monad.Trans
     , Cell.Util
     , Feedback
