--- a/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
+++ b/essence-of-live-coding-PortMidi/essence-of-live-coding-PortMidi.cabal
@@ -34,5 +34,7 @@ library
     , transformers >= 0.5
     , PortMidi >= 0.2
     , essence-of-live-coding >= 0.2.6
+    , has-transformers
+    , transformers-base
   hs-source-dirs:   src
   default-language: Haskell2010
