--- a/essence-of-live-coding-pulse/essence-of-live-coding-pulse.cabal
+++ b/essence-of-live-coding-pulse/essence-of-live-coding-pulse.cabal
@@ -34,6 +34,8 @@ library
     , transformers >= 0.5
     , pulse-simple >= 0.1
     , foreign-store >= 0.2
+    , has-transformers
+    , transformers-base
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
