--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -90,6 +90,9 @@ library
     , foreign-store >= 0.2
     , time >= 1.9
     , mmorph >= 1.1
+    , has-transformers >= 0.1.0.4
+    , transformers-base
+    
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
@@ -125,6 +128,7 @@ test-suite test
     , QuickCheck >= 2.12
     , test-framework-hunit >= 0.3
     , HUnit >= 1.3
+    , transformers-base
   default-language:    Haskell2010
 
 executable TestExceptions
