--- a/essence-of-live-coding-warp/essence-of-live-coding-warp.cabal
+++ b/essence-of-live-coding-warp/essence-of-live-coding-warp.cabal
@@ -45,6 +45,7 @@ library
     , wai >= 3.2.2.1
     , warp >= 3.3.13
     , essence-of-live-coding >= 0.2.6
+    , transformers-base
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  StrictData
