--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -97,6 +97,7 @@ library
     , time >= 1.9
     , mmorph >= 1.1
     , profunctors >= 5.2
+    , selective >= 0.5
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
