--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         ghc: ['8.8','8.10','9.0','9.2']
         os: [ubuntu-latest, macOS-latest, windows-latest]
-    name: Haskell GHC ${{ matrix.ghc }} cabal + stack
+    name: Haskell GHC ${{ matrix.ghc }} on ${{ matrix.os }}, cabal + stack
     env:
       cabal_project_freeze: cabal.project.${{ matrix.ghc }}.freeze
     steps:
