--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -90,6 +90,7 @@ library
     , foreign-store >= 0.2
     , time >= 1.9
     , mmorph >= 1.1
+    , has-transformers
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
@@ -143,4 +144,5 @@ executable TestNonBlocking
       base >= 4.11 && < 5
     , transformers >= 0.5
     , essence-of-live-coding
+    , has-transformers
   default-language:    Haskell2010
