--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,6 @@ jobs:
         ghc: ['8.8.4','8.10.7','9.0.2','9.2.5','9.4.5']
         os: [ubuntu-latest]
     name: Haskell GHC ${{ matrix.ghc }} cabal + stack
-    env:
-      cabal_project_freeze: cabal.project.${{ matrix.ghc }}.freeze
     steps:
       - uses: actions/checkout@v2
       - uses: haskell/actions/setup@v2.0.2
@@ -33,18 +31,18 @@ jobs:
           path: |
             ${{ steps.setup-haskell-build.outputs.cabal-store }}
             dist-newstyle
-          key: ${{ runner.os }}-cabal-${{ matrix.ghc }}-${{ hashFiles(env.cabal_project_freeze) }}
+          key: ${{ runner.os }}-cabal-${{ matrix.ghc }}
           restore-keys: |
             ${{ runner.os }}-cabal-${{ matrix.ghc }}
       - name: Cabal build dependencies
         run: |
-          cabal build all  --enable-tests --only-dependencies --project-file=cabal.project.${{ matrix.ghc }}
+          cabal build all  --enable-tests --only-dependencies
       - name: Cabal build packages
         run: |
-          cabal build all --enable-tests --project-file=cabal.project.${{ matrix.ghc }}
+          cabal build all --enable-tests
       - name: Cabal test
         run: |
-          cabal test all --enable-tests --test-show-details=Always --project-file=cabal.project.${{ matrix.ghc }}
+          cabal test all --enable-tests --test-show-details=Always
       - name: Cache stack build artifacts
         uses:  freckle/stack-cache-action@v1.0.1
         with:
