Run fourmolu as separate job and install via nixpkgs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,18 @@
 on: [push, pull_request]
 name: build
 jobs:
+  fourmolu:
+    name: "Run fourmolu"
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: cachix/install-nix-action@v22
+      with:
+        nix_path: nixpkgs=channel:nixos-unstable
+    - name: Set up and run fourmolu
+      run: |
+        nix shell nixpkgs#haskellPackages.fourmolu --command fourmolu --mode check .
+
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -17,12 +29,6 @@ jobs:
           enable-stack: true
       - name: Install dependencies
         run: sudo apt-get install -y libxml2-utils libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libpulse-dev libblas-dev liblapack-dev libasound2-dev wget
-      - name: Install fourmolu
-        run: |
-          wget https://github.com/fourmolu/fourmolu/releases/download/v0.9.0.0/fourmolu-0.9.0.0-linux-x86_64
-          chmod u+x fourmolu-0.9.0.0-linux-x86_64
-      - name: Check formatting with fourmolu
-        run: ./fourmolu-0.9.0.0-linux-x86_64 --mode check $(git ls-files '*.hs')
       - name: Cabal update
         run: cabal update
       - name: Cache Cabal build artifacts
