--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -106,6 +106,7 @@ test-suite test
   main-is: Main.hs
   other-modules:
       Cell
+    , Migrate
     , Migrate.NoMigration
     , Cell.Monad.Trans
     , Cell.Util
