--- a/essence-of-live-coding-bayes/essence-of-live-coding-bayes.cabal
+++ b/essence-of-live-coding-bayes/essence-of-live-coding-bayes.cabal
@@ -68,7 +68,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.16.3.0
+    build-depends:    base >= 4.13 && < 4.18
                     , essence-of-live-coding >= 0.2.7
                     , monad-bayes  >= 1.1.0
                     , mmorph >= 1.2.0
@@ -105,5 +105,5 @@ test-suite essence-of-live-coding-bayes-test
 
     -- Test dependencies.
     build-depends:
-        base ^>=4.16.3.0,
-        essence-of-live-coding-bayes
+        base >= 4.13 && < 4.18
+      , essence-of-live-coding-bayes
