WIP add Cell.Util.Random

--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -110,6 +110,7 @@ test-suite test
     , Migrate.NoMigration
     , Cell.Monad.Trans
     , Cell.Util
+    , Cell.Util.Random
     , Cell.Util.Traversable
     , Feedback
     , Handle
