--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -100,6 +100,7 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
+  ghc-options: -ddump-simpl -ddump-to-file -dsuppress-idinfo -ddump-simpl-stats
 
 test-suite test
   type: exitcode-stdio-1.0
